# RingQueue

./: .gitignore  CMakeLists.txt  DebugUtils.h  DumpUtils.h  LICENSE  Makefile  README.md  ReleaseUtils.h  RingQueue.cbp  RingQueue.h  RingQueueOld.h  RingQueue_Linux.cbp  RingQueue_vc2008.sln  RingQueue_vc2010.sln  RingQueue_vc2013.sln  RingQueue_vc2015.sln  _mktime32.txt  console.c  console.h  dump_mem.c  get_char.c  get_char.h  main.cpp  mq.c  q3.h  sleep.h  sys_timer.c  sys_timer.h  test.h
cmake/: ReadMe.txt
cmake/modules/: DisplayComplierEnv.cmake  GetCompilerToolset.cmake
disruptor/: RingBufferPerfTest.bat  RingBufferPerfTest.java
disruptor/csharp/: Program.cs  Version.cs  nPnCRingQueueTest.cs
disruptor/java/: RingBufferPerfTest2.java
douban/: SpinWait.cs  a.c  a2.c  a3.c  mq.c  q3.h  q3_new.h  qlock.h
include/RingQueue/: Attributes.h  DisruptorRingQueue.h  DisruptorRingQueueEx.h  DisruptorRingQueueOld.h  MessageEvent.h  RingQueue.h  RingQueueOld.h  Sequence.h  SerialRingQueue.h  SingleRingQueue.h  SpinMutex.h  console.h  dump_mem.h  mq.h  port.h  q.h  q3.h  sleep.h  stdint.h  sys_timer.h  test.h  vs_inttypes.h  vs_stdbool.h  vs_stdint.h
include/RingQueue/msvc/: pthread.h  sched.h  stdbool.h  stdint.h  targetver.h
projects/RingQueue/vc2008/: RingQueue.vcproj
projects/RingQueue/vc2010/: RingQueue.vcxproj  RingQueue.vcxproj.filters
projects/RingQueue/vc2013/: ReadMe.txt  RingQueue.vcxproj  RingQueue.vcxproj.filters
projects/RingQueue/vc2015/: RingQueue.vcxproj  RingQueue.vcxproj.filters
src/: CMakeLists.txt  main.cpp  mq.c  sleep.c
src/RingQueue/: CMakeLists.txt  dump_mem.c  get_char.c  main.cpp  mq.c  sleep.c
src/RingQueue/msvc/: pthead.c  pthread.c  sched.c
src/msvc/: pthead.c
